--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,35 @@ a {
 }
 
 /* GALLERY */
+.gallery2 {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 20px;
+  padding: 20px;
+}
+
+.galleryH1 {
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+/* Les images dans la galerie */
+.gallery-item {
+  width: 100%;
+  height: 200px; /* Ajuste la hauteur si nécessaire */
+  overflow: hidden;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+/* Les images sont toujours bien ajustées */
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.2s ease;
+}
 
 .gallery {
   display: grid;
@@ -77,10 +106,41 @@ a {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   transition: transform 0.3s ease;
+  cursor: pointer;
 }
 
-.gallery img:hover {
-  transform: scale(1.05);
+.gallery-item img:hover {
+  transform: scale(1.2);
+}
+
+/* POPUP */
+#popup-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+#popup-bg.active {
+  display: flex;
+}
+
+#popup-content {
+  position: relative;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+#popup-img {
+  max-width: 100%;
+  max-height: 80vh;
 }
 
 /* BREED SEARCH */
@@ -98,7 +158,7 @@ a {
 .breed-search input {
   padding: 10px;
   border: 1px solid #ccc;
-  /* border-radius: 5px 0 0 5px; */
+  border-radius: 5px 0 0 5px;
   border: none;
 }
 
@@ -109,12 +169,28 @@ a {
   border: none;
   border-radius: 0 5px 5px 0;
   cursor: pointer;
+  max-height: 36px;
 }
 
+.dropdown {
+  background-color: #fff;
+  width: auto;
+  max-height: 208px;
+  overflow-y: auto;
+  display: none;
+}
+
+.dropdown li {
+  padding: 5px 0;
+}
+
+.dropdown li:hover {
+  background-color: #eee;
+  cursor: pointer;
+}
 
 /* RESPONSIVE DESIGN */
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .navbar ul {
     flex-direction: column;
     align-items: center;
@@ -122,5 +198,11 @@ a {
 
   .navbar li {
     margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 459.99px) {
+  .gallery-item {
+    height: 264px;
   }
 }
